--- a/MFRegAccess/MFRegAccess.csproj
+++ b/MFRegAccess/MFRegAccess.csproj
@@ -2,6 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
+    <Authors>MFunction</Authors>
+    <Company>MFunction ST</Company>
+    <Copyright>MFunction</Copyright>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\Registrys\" />
+    <Folder Include="Models\Structures\" />
+  </ItemGroup>
 
 </Project>
